fixed banner mobile spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -276,7 +276,7 @@ footer a{
 @media only screen and (max-width: 720px){
   .banner-container {
     /* height: 250px; */
-    width: 60%;
+    width: 80%;
   }
   .style1{
     padding: 1em 1em;
